day5_argo-ci/ingresshttps.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-matomi
  # namespace: matomi
spec:
  controller: k8s.io/ingress-nginx
---



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: self-sign
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # ingressClassName: nginx-matomi
  rules:
  - host: eml.sandbox.aws.teamwork.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - eml.sandbox.aws.teamwork.net
    secretName: self-sign-secret # do not change, this is provided by Argo CD
